# ops-agent

./: .gitignore  README.md  config.yaml  hosts.yaml.example  pyproject.toml
docs/superpowers/plans/: 2026-06-23-ops-agent.md
docs/superpowers/specs/: 2026-06-23-ops-agent-design.md
ops_bootstrap/: __main__.py
ops_client/: __main__.py  approval.py  prompts.py
ops_core/: alerting.py  allowlist.py  analysis.py  config.py  inspection.py  inventory.py  models.py  policy.py  remote_exec.py  store.py
ops_daemon/: __main__.py
ops_mcp/: server.py
ops_web/: __main__.py  chat.py  server.py  templates.py
scripts/: bootstrap.sh
tests/: conftest.py
tests/integration/: test_analysis_mcp.py  test_daemon.py  test_mcp_tools.py  test_remote_exec_ssh.py  test_web.py
tests/unit/: test_alerting.py  test_allowlist.py  test_analysis.py  test_approval.py  test_approval_cache.py  test_config.py  test_daemon_logic.py  test_inspection.py  test_inventory.py  test_mcp_new_tools.py  test_models.py  test_policy.py  test_remote_exec.py  test_repl_utils.py  test_smoke.py  test_store.py  test_web_routes.py
