[project]
name = "ops-agent"
version = "0.1.0"
description = "Centralized ops agent over SSH using claude-agent-sdk"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.81",
    "asyncssh>=2.14",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "starlette>=0.37",
    "sse-starlette>=2.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ops-daemon = "ops_daemon.__main__:main"
ops-client = "ops_client.__main__:main"
ops-web = "ops_web.__main__:main"
ops-bootstrap = "ops_bootstrap.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ops_core", "ops_mcp", "ops_daemon", "ops_client", "ops_web", "ops_bootstrap"]
